@@ -108,6 +108,10 @@ Optimizations
 * LUCENE-4497: Don't write PosVIntCount to the positions file in 
   Lucene41PostingsFormat, as its always totalTermFreq % BLOCK_SIZE. (Robert Muir)
 
+* LUCENE-4498: In Lucene41PostingsFormat, when a term appears in only one document, 
+  Instead of writing a file pointer to a VIntBlock containing the doc id, just 
+  write the doc id.  (Mike McCandless, Robert Muir)
+
 Build
 
 * LUCENE-4451: Memory leak per unique thread caused by 
